--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,5 +1,11 @@
 <h1>Dice Roll</h1>
 
-<ul>
+<form action="/process_roll>
+  <input type="text" name="dice">
+  
+  <button>Roll!</button>
+</form>
+
+<!--<ul>
   <li><a href="/dice/2/6">Roll two 6-sided dice</a></li>
-</ul>
+</ul>-->
