--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,7 +1,10 @@
 <h1>Dice Roll</h1>
 
-<form action="/process_roll>
-  <input type="text" name="dice">
+<form action="/process_roll">
+  <label for="dice_id">Number of dice to roll?</label>
+  <input id="dice_id" name="dice">
+  <label for="sides_id">How many sides per die? </label>
+  <input id="sides_id" name="sides">
   
   <button>Roll!</button>
 </form>
